Removed centered sphere.

--- a/new/index.html
+++ b/new/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Baraa Hamodi</title>
+	<title>Baraa Hamodi - Mechatronics Engineer</title>
 
 	<!-- Behavioral Meta Data -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -55,7 +55,7 @@
 <body>
 	<div class="preloader">
 		<div class="loading">
-			<h2>Loading...</h2>
+			<h3>Loading...</h3>
 			<span class="progress"></span>
 		</div>
 		<script>
@@ -77,7 +77,6 @@
 
 			<!-- Hero -->
 			<li class="layer" data-depth="0.20"><div class="title"><h2>Mechatronics Engineer</h2><span class="line"></span></div></li>
-			<li class="layer" data-depth="0.25"><div class="sphere"><img src="img/sphere.png" alt="sphere"></div></li>
 			<li class="layer" data-depth="0.30"><div class="hero"><h1>Baraa Hamodi</h1><p class="sub-title">A young man with big dreams.</p></div></li>
 
 			<!-- Flakes -->
