Added Khan Academy link.

--- a/new/index.html
+++ b/new/index.html
@@ -106,6 +106,7 @@
 						<li><a class="github" href="https://github.com/bhamodi"></a></li>
 						<li><a class="stackoverflow" href="http://stackoverflow.com/users/3474514/baraa-h"></a></li>
 						<li><a class="codecademy" href="http://www.codecademy.com/bhamodi"></a></li>
+						<li><a class="khanacademy" href="https://www.khanacademy.org/profile/BaraaHamodi"></a></li>
 						<li><a class="linkedin" href="https://www.linkedin.com/in/baraahamodi"></a></li>
 					</ul>
 					<a class="mail" href="mailto:bhamodi@uwaterloo.ca">bhamodi@uwaterloo.ca</a>
