Changed splash background to real photo. Links now open in new tab.

--- a/new/index.html
+++ b/new/index.html
@@ -103,13 +103,13 @@
 			<li class="layer" data-depth="0.20">
 				<div class="contact">
 					<ul class="icons">
-						<li><a class="github" href="https://github.com/bhamodi"></a></li>
-						<li><a class="stackoverflow" href="http://stackoverflow.com/users/3474514/baraa-h"></a></li>
-						<li><a class="codecademy" href="http://www.codecademy.com/bhamodi"></a></li>
-						<li><a class="khanacademy" href="https://www.khanacademy.org/profile/BaraaHamodi"></a></li>
-						<li><a class="linkedin" href="https://www.linkedin.com/in/baraahamodi"></a></li>
+						<li><a class="github" target="_blank" href="https://github.com/bhamodi"></a></li>
+						<li><a class="stackoverflow" target="_blank" href="http://stackoverflow.com/users/3474514/baraa-h"></a></li>
+						<li><a class="codecademy" target="_blank" href="http://www.codecademy.com/bhamodi"></a></li>
+						<li><a class="khanacademy" target="_blank" href="https://www.khanacademy.org/profile/BaraaHamodi"></a></li>
+						<li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/baraahamodi"></a></li>
 					</ul>
-					<a class="mail" href="mailto:bhamodi@uwaterloo.ca">bhamodi@uwaterloo.ca</a>
+					<a class="mail" target="_blank" href="mailto:bhamodi@uwaterloo.ca">bhamodi@uwaterloo.ca</a>
 				</div>
 			</li>
 		</ul>
