--- a/new/index.html
+++ b/new/index.html
@@ -101,6 +101,7 @@
 
 			<!-- Contact -->
 			<li class="layer" data-depth="0.20">
+				<a href="home" class="button">Click here to enter</a>
 				<div class="contact">
 					<ul class="icons">
 						<li><a class="github" target="_blank" href="https://github.com/bhamodi"></a></li>
