Implemented js and moved css files for home page.

--- a/new/home.html
+++ b/new/home.html
@@ -12,13 +12,13 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/solido.css">
-        <link rel="stylesheet" href="css/isotope.css">
-        <link rel="stylesheet" href="css/responsive.css">
-        <link rel="stylesheet" href="css/jquery.vegas.css">
-        <link rel="stylesheet" href="css/magnific-popup.css">
-        <link rel="stylesheet" href="css/green.css">
+        <link rel="stylesheet" href="css/home/main.css">
+        <link rel="stylesheet" href="css/home/solido.css">
+        <link rel="stylesheet" href="css/home/isotope.css">
+        <link rel="stylesheet" href="css/home/responsive.css">
+        <link rel="stylesheet" href="css/home/jquery.vegas.css">
+        <link rel="stylesheet" href="css/home/magnific-popup.css">
+        <link rel="stylesheet" href="css/home/green.css">
         
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
@@ -425,21 +425,21 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
-        <script src="js/jquery.smoothwheel.js"></script>
-        <script src="js/jquery.inview.min.js"></script>
-        <script src="js/jquery.sticky.js"></script>
-        <script src="js/caroussel/jquery.easing.1.3.js"></script>
-        <script src="js/vegas/jquery.vegas.js"></script>
-        <script src="js/jquery.hoverdir.min.js"></script>
-        <script src="js/jquery.nav.js"></script>
-        <script src="js/popup/jquery.magnific-popup.js"></script>
-        <script src="js/caroussel/jquery.contentcarousel.js"></script>
-        <script src="js/jquery.isotope.min.js"></script>
-        <script src="js/video/jquery.mb.YTPlayer.js"></script>
-        <script src="js/jquery.validate.js"></script>
-        <script src="js/jquery.form.min.js"></script>
-        <script src="js/devices.js"></script>
+        <script src="js/home/main.js"></script>
+        <script src="js/home/jquery.carouFredSel-6.2.1-packed.js"></script>
+        <script src="js/home/jquery.smoothwheel.js"></script>
+        <script src="js/home/jquery.inview.min.js"></script>
+        <script src="js/home/jquery.sticky.js"></script>
+        <script src="js/home/caroussel/jquery.easing.1.3.js"></script>
+        <script src="js/home/vegas/jquery.vegas.js"></script>
+        <script src="js/home/jquery.hoverdir.min.js"></script>
+        <script src="js/home/jquery.nav.js"></script>
+        <script src="js/home/popup/jquery.magnific-popup.js"></script>
+        <script src="js/home/caroussel/jquery.contentcarousel.js"></script>
+        <script src="js/home/jquery.isotope.min.js"></script>
+        <script src="js/home/video/jquery.mb.YTPlayer.js"></script>
+        <script src="js/home/jquery.validate.js"></script>
+        <script src="js/home/jquery.form.min.js"></script>
+        <script src="js/home/devices.js"></script>
     </body>
 </html>
