Removed side-scrolling featured portfolio feature. Updated articles.

--- a/new/home.html
+++ b/new/home.html
@@ -82,9 +82,8 @@
                     <li class="current"><a href="#home">home</a></li>
                     <li><a href="#anchor2">about</a></li>
                     <li><a href="#anchor3">facts</a></li>
-                    <li><a href="#anchor4">services</a></li>
-                    <li><a href="#anchor5">projects</a></li>
-                    <li><a href="#anchor6">contact</a></li>
+                    <li><a href="#anchor4">projects</a></li>
+                    <li><a href="#anchor5">contact</a></li>
                 </ul>
             </nav>
             <nav class="menu">
@@ -92,10 +91,9 @@
                     <li class="current"><a href="#home">home</a></li>
                     <li><a href="#anchor2">about</a></li>
                     <li><a href="#anchor3">facts</a></li>
-                    <li><a href="#anchor4">services</a></li>
                     <!--<li><a href="#">blog</a></li>-->
-                    <li><a href="#anchor5">projects</a></li>
-                    <li><a href="#anchor6">contact</a></li>
+                    <li><a href="#anchor4">projects</a></li>
+                    <li><a href="#anchor5">contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -247,115 +245,11 @@
             <div class="spacer newtr"></div>
             <div class="p-image-01 hideme-slide2 dontHide"><img src="img/parallax/p-image-01.png" alt='img'></div>
         </article>
-
-        <article id="anchor4" class="content menu-top dark">
+        
+        <article id="anchor4" class="content dark">
             <header class="title one">My Projects</header>
             <div class="spacer"></div>
             <div class="title two">Check out my following projects, I'm sure you'll love them!</div>
-            <section class="featured-slider">
-                <div id="ca-container" class="ca-container">
-                    <div class="nav-featured">
-                        <div class="prev-featured"></div>
-                        <a href="#anchor5"><div class="btn-featured">check it out</div></a>
-                        <div class="next-featured"></div>
-                    </div>
-                    <div class="main-carousel hideme dontHide">
-                        <div class="ca-wrapper">
-                            <div class="ca-item ca-item-1">
-                                <div class="f-single">
-                                    <a href="img/featured/big/big01.jpg">
-                                        <div class="f-image">
-                                            <img src="img/featured/feat-01.jpg" alt='img'>
-                                            <div class="image-hover-overlay"></div>
-                                            <span class="f-category"></span>
-                                            <div class="portfolio-meta">
-                                                <div>Visit here!</div>
-                                                <div class="clear"></div>
-                                                <div>Photography</div>
-                                            </div>
-                                        </div>
-                                        <div class="f-info">Chicago</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="ca-item ca-item-2">
-                                <div class="f-single">
-                                    <a href="img/featured/big/big02.jpg">
-                                        <div class="f-image">
-                                            <img src="img/featured/feat-02.jpg" alt='img'>
-                                            <div class="image-hover-overlay"></div>
-                                            <span class="f-category"></span>
-                                            <div class="portfolio-meta">
-                                                <div>Visit here!</div>
-                                                <div class="clear"></div>
-                                                <div>Brooklyn</div>
-                                            </div>
-                                        </div>
-                                        <div class="f-info">New York</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="ca-item ca-item-3">
-                                <div class="f-single">
-                                    <a href="img/featured/big/big03.jpg">
-                                        <div class="f-image">
-                                            <img src="img/featured/feat-03.jpg" alt='img'>
-                                            <div class="image-hover-overlay"></div>
-                                            <span class="f-category"></span>
-                                            <div class="portfolio-meta">
-                                                <div>Visit here!</div>
-                                                <div class="clear"></div>
-                                                <div>San Francisco<br>Las Vegas<br>Los Angelas</div>
-                                            </div>
-                                        </div>
-                                        <div class="f-info">California</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="ca-item ca-item-4">
-                                <div class="f-single">
-                                    <a href="http://www.youtube.com/watch?v=cH6kxtzovew" class="mfp-iframe" title="My YouTube Video">
-                                        <div class="f-image">
-                                            <img src="img/featured/feat-04.jpg" alt='img'>
-                                            <div class="image-hover-overlay"></div>
-                                            <span class="f-category"></span>
-                                            <div class="portfolio-meta">
-                                                <div>Visit here!</div>
-                                                <div class="clear"></div>
-                                                <div>Toronto<br>Ottawa<br>Waterloo</div>
-                                            </div>
-                                        </div>
-                                        <div class="f-info">Ontario</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="ca-item ca-item-5">
-                                <div class="f-single">
-                                    <a href="img/featured/big/big05.jpg">
-                                        <div class="f-image">
-                                            <img src="img/featured/feat-05.jpg" alt='img'>
-                                            <div class="image-hover-overlay"></div>
-                                            <span class="f-category"></span>
-                                            <div class="portfolio-meta">
-                                                <div>Visit here!</div>
-                                                <div class="clear"></div>
-                                                <div>Photography</div>
-                                            </div>
-                                        </div>
-                                        <div class="f-info">Boston</div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </article>
-        
-        <article id="anchor5" class="content dark">
-            <header class="title one">Our Portfolio</header>
-            <div class="spacer"></div>
-            <div class="title two">We have been privileged to work and grow with a diverse range of clients. We have worked with brands in Canada, USA, UK, and many others.</div>
             <div id="portfolio" class="container">
                 <div class="section portfoliocontent">
                     <section id="options" class="clear">
@@ -475,7 +369,7 @@
 
         <footer class="footer light">
             <div class="footer-container">
-                <div id="anchor6" class="title one no-top">Contact</div>
+                <div id="anchor5" class="title one no-top">Contact</div>
                 <div class="spacer"></div>
                 <div class="title two f-bottom">We like to create things with fun, like-minded people.<br> Feel free to say hello!</div>
                 <div class="foot-third hideme dontHide">
@@ -553,7 +447,7 @@
         <script src="js/home/jquery.hoverdir.min.js"></script>
         <script src="js/home/jquery.nav.js"></script>
         <script src="js/home/popup/jquery.magnific-popup.js"></script>
-        <script src="js/home/caroussel/jquery.contentcarousel.js"></script>
+        <!--<script src="js/home/caroussel/jquery.contentcarousel.js"></script>-->
         <script src="js/home/jquery.isotope.min.js"></script>
         <script src="js/home/video/jquery.mb.YTPlayer.js"></script>
         <script src="js/home/jquery.validate.js"></script>
