Cleaned up contact form.

--- a/new/home.html
+++ b/new/home.html
@@ -368,21 +368,7 @@
                 <div id="anchor5" class="title one no-top">Contact</div>
                 <div class="spacer"></div>
                 <div class="title two f-bottom">I like to create things with fun, like-minded people.<br>Feel free to say hello!</div>
-                <div class="foot-third hideme dontHide">
-                    <div class="f-title-one">contact</div>
-                    <div class="f-title-two">Visit Our Office</div>
-                    <div class="f-data adress"><img src="img/adress-ico.png" alt='img'> Adress: <span>1234 Street Name, City Name</span></div>
-                    <div class="f-data phone"><img src="img/phone-ico.png" alt='img'> Phone: <span>(123) 456-7890</span></div>
-                    <div class="f-data e-mail"><img src="img/mail-ico.png" alt='img'> Email: <span>theme@solido.com</span></div>
-                </div>
-                <div class="foot-third hideme dontHide">
-                    <div class="f-title-one">contact</div>
-                    <div class="f-title-two">Business Hours</div>
-                    <div class="f-data hour-1"><img src="img/hours-ico.png" alt='img'> Mon. - Fri. <span>8am to 5pm</span></div>
-                    <div class="f-data hour-2"><img src="img/hours-ico.png" alt='img'> Sat. <span>8am to 11am</span></div>
-                    <div class="f-data hour-3"><img src="img/hours-ico.png" alt='img'> Sun. <span>Closed</span></div>
-                </div>
-                <div class="foot-third hideme dontHide">
+                <div class="hideme dontHide">
                     <form method="post" id="contact" class="peThemeContactForm" action="mail.php">
                         <div id="personal" class="bay form-horizontal">
                             <div class="control-group"><!--name field-->
