Updated social contact footer on the splash and home page.

--- a/new/home.html
+++ b/new/home.html
@@ -164,7 +164,7 @@
                             <div class="details">
                                 <ul class="feature-list">
                                     <li><span class="list-dot"></span>Dynamic Web Elements</li>
-                                    <li><span class="list-dot"></span>22</li>
+                                    <li><span class="list-dot"></span>Interactive Modules</li>
                                     <li><span class="list-dot"></span>Backend API Framework</li>
                                 </ul>
                             </div>
@@ -178,7 +178,7 @@
                             <div class="details">
                                 <ul class="feature-list">
                                     <li><span class="list-dot"></span>Backend Framework Design</li>
-                                    <li><span class="list-dot"></span>22</li>
+                                    <li><span class="list-dot"></span>Script Automation</li>
                                     <li><span class="list-dot"></span>Web Scraper Tools</li>
                                 </ul>
                             </div>
@@ -404,16 +404,16 @@
         </footer>
 
         <a href="#" class="scrollup">^</a>
-        <div class="socialFooter">
-            <div class="social-icons">
-                <div class="social">
-                    <a href="https://facebook.com/" target="_blank"><div class="face"></div></a>
-                    <a href="https://twitter.com/" target="_blank"><div class="twitt"></div></a>
-                    <a href="https://plus.google.com/" target="_blank"><div class="plus"></div></a>
-                </div>
-            </div>
-            <div class="clear"></div>
-            <div class="copy">2014 © Baraa Hamodi | All rights reserved.</div>
+
+        <div class="contact">
+            <ul class="icons">
+                <li><a class="github" target="_blank" href="https://github.com/bhamodi"></a></li>
+                <li><a class="stackoverflow" target="_blank" href="http://stackoverflow.com/users/3474514/baraa-h"></a></li>
+                <li><a class="codecademy" target="_blank" href="http://www.codecademy.com/bhamodi"></a></li>
+                <li><a class="khanacademy" target="_blank" href="https://www.khanacademy.org/profile/BaraaHamodi"></a></li>
+                <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/baraahamodi"></a></li>
+            </ul>
+            <div class="copy-right">2014 © Baraa Hamodi | All rights reserved.</div>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -429,7 +429,6 @@
         <script src="js/home/jquery.hoverdir.min.js"></script>
         <script src="js/home/jquery.nav.js"></script>
         <script src="js/home/popup/jquery.magnific-popup.js"></script>
-        <!--<script src="js/home/caroussel/jquery.contentcarousel.js"></script>-->
         <script src="js/home/jquery.isotope.min.js"></script>
         <script src="js/home/video/jquery.mb.YTPlayer.js"></script>
         <script src="js/home/jquery.validate.js"></script>
