Cleaned up src and added browser upgrade prompt for people who are lte IE8.

--- a/new/index.html
+++ b/new/index.html
@@ -48,7 +48,7 @@
 		<link rel="stylesheet" href="css/ie.css" />
 	<![endif]-->
 
-	<!-- Javascript -->
+	<!-- jQuery -->
 	<script src="js/jquery.js"></script>
 </head>
 <body>
@@ -74,9 +74,9 @@
 			<li class="layer" data-depth="0.10"><div class="background"></div></li>
 			<li class="layer" data-depth="0.15"><div class="triangles"></div></li>
 
-			<!-- Hero -->
+			<!-- Main header -->
 			<li class="layer" data-depth="0.20"><div class="title"><h2>Mechatronics Engineer</h2><span class="line"></span></div></li>
-			<li class="layer" data-depth="0.30"><div class="hero"><h1>Baraa Hamodi</h1><p class="sub-title">A young man with big dreams.</p></div></li>
+			<li class="layer" data-depth="0.30"><div class="main-title"><h1>Baraa Hamodi</h1><p class="sub-title">A young man with big dreams.</p></div></li>
 
 			<!-- Flakes -->
 			<li class="layer" data-depth="0.40">
