Updated portfolio section. Added more content.

--- a/new/home.html
+++ b/new/home.html
@@ -294,7 +294,7 @@
                             </div>
                         </div>
                         
-                        <div class="ch-grid element backend" id="portfolio-04.html">
+                        <div class="ch-grid element web" id="portfolio-04.html">
                             <img class="ch-item" src="img/portfolio/thumb-03.jpg" alt='img'>
                             <div>
                                 <span><span class="p-category"></span>Portfolio Website<span class="cat2">Full Stack Web Developer</span></span>
@@ -304,7 +304,7 @@
                         <div class="ch-grid element web tools" id="portfolio-05.html">
                             <img class="ch-item" src="img/portfolio/thumb-05.jpg" alt='img'>
                             <div>
-                                <span><span class="p-category"></span>The Chop Shop<span class="cat2">Website</span></span>
+                                <span><span class="p-category"></span>Fuel Cell Car<span class="cat2">Embedded Software Developer</span></span>
                             </div>
                         </div>
 
@@ -369,7 +369,7 @@
 
         <footer class="footer light">
             <div class="footer-container">
-                <div id="anchor5" class="title one no-top">Contact</div>
+                <div id="anchor5" class="title one">Contact</div>
                 <div class="spacer"></div>
                 <div class="title two f-bottom">I like to create things with fun, like-minded people.<br>Feel free to say hello!</div>
                 <div class="hideme dontHide">
