--- a/new/portfolio-04.html
+++ b/new/portfolio-04.html
@@ -12,9 +12,9 @@
         </div>
         <div class="wrapper-project">
             <ul>
-                <li><img src="img/works/work-03a.jpg" /></li>
-                <li><img src="img/works/work-03b.jpg" /></li>
-                <li><img src="img/works/work-03c.jpg" /></li>
+                <li><img src="img/works/work-03a.jpg"/></li>
+                <li><img src="img/works/work-03b.jpg"/></li>
+                <li><img src="img/works/work-03c.jpg"/></li>
               </ul>
         </div>
         <div class="controller-3">
@@ -24,11 +24,12 @@
 	</div>
     <div class="clear"></div>
     <div class="info-project">
-        <div class="tag-project">Design / Photography</div>
-        <div class="title-project">Blackboard</div>
+        <div class="tag-project">Full Stack Web Developer</div>
+        <div class="title-project">Personal Portfolio</div>
         <div class="spacer"></div>
-        <div class="description">Gabriele Galimberti is a documentary/travel photographer whose work has appeared in many international magazines including Newsweek, Le Monde, Geo, La Repubblica, Io Donna and Vanity Fair among others.<br><br>
-He  was born in Tuscany in 1977 and studied photography at ‘Fondazione Marangoni’ in Florence.  In 2002 Gabriele was selected as one of ten emerging young photographers in a competition called  ’Giovane Fotografia in Italia’.  He simultaneously made his debut as a commercial photographer with his first magazine assignments, and while he continues to be active in the field, his interests have expanded to include documentary/travel photography. In this vein he recently completed an 18-month couch-surfing trip around the world during which he gathered material for a number of photographic projects.</div>
+        <div class="description">This entire website is a product of this project. I found this project to be really fun as I was able to completely design how I want to represent myself online everything from how my experience is displayed to the syles used. I also took the required steps to make this website fully resonsive so that it adjusts to your screen size. My wesite has nice UI/UX on both desktop and mobile.<br><br>
+        Languages used include HTML, CSS, JavaScript and PHP. You can find all the source code on my <a href = "https://github.com/bhamodi/bhamodi.github.io" target = "_blank">GitHub.</a>
+        </div>
     </div>
 </div>
 <div class="clear"></div>
