--- a/new/portfolio-05.html
+++ b/new/portfolio-05.html
@@ -12,9 +12,9 @@
         </div>
         <div class="wrapper-project">
             <ul>
-                <li><img src="img/works/work-01a.jpg" /></li>
-                <li><img src="img/works/work-01b.jpg" /></li>
-                <li><img src="img/works/work-01c.jpg" /></li>
+                <li><img src="img/works/work-01a.jpg"/></li>
+                <li><img src="img/works/work-01b.jpg"/></li>
+                <li><img src="img/works/work-01c.jpg"/></li>
             </ul>
         </div>
         <div class="controller-3">
@@ -24,11 +24,12 @@
 	</div>
     <div class="clear"></div>
     <div class="info-project">
-        <div class="tag-project">Design / Photography</div>
-        <div class="title-project">Kallo Corn Cakes</div>
+        <div class="tag-project">Embedded Software Developer</div>
+        <div class="title-project">Fuel Cell Car</div>
         <div class="spacer"></div>
-        <div class="description">Gabriele Galimberti is a documentary/travel photographer whose work has appeared in many international magazines including Newsweek, Le Monde, Geo, La Repubblica, Io Donna and Vanity Fair among others.<br><br>
-He  was born in Tuscany in 1977 and studied photography at ‘Fondazione Marangoni’ in Florence.  In 2002 Gabriele was selected as one of ten emerging young photographers in a competition called  ’Giovane Fotografia in Italia’.  He simultaneously made his debut as a commercial photographer with his first magazine assignments, and while he continues to be active in the field, his interests have expanded to include documentary/travel photography. In this vein he recently completed an 18-month couch-surfing trip around the world during which he gathered material for a number of photographic projects.</div>
+        <div class="description">
+            In this project, I worked with three other Mechatronics Engineers to design, build and program an autonomous fuel cell powered car. I was actively involved in all stages and I assumed a leadership role in my team.<br><br>This fuel cell powered car featured a PID control system and was able to follow lines very accurately. This project really expanded my knowledge of embedded systems and low-level programming. We used a combination of C and C++ to interact with the MSP-430 Microcontroller. You can find all the source code on my <a href = "https://github.com/bhamodi/Autonomous-Fuel-Cell-Car" target = "_blank">GitHub.</a>
+        </div>
     </div>
 </div>
 <div class="clear"></div>
