--- a/new/portfolio-04.html
+++ b/new/portfolio-04.html
@@ -27,8 +27,9 @@
         <div class="tag-project">Full Stack Web Developer</div>
         <div class="title-project">Personal Portfolio</div>
         <div class="spacer"></div>
-        <div class="description">This entire website is a product of this project. I found this project to be really fun as I was able to completely design how I want to represent myself online everything from how my experience is displayed to the syles used. I also took the required steps to make this website fully resonsive so that it adjusts to your screen size. My wesite has nice UI/UX on both desktop and mobile.<br><br>
-        Languages used include HTML, CSS, JavaScript and PHP. You can find all the source code on my <a href = "https://github.com/bhamodi/bhamodi.github.io" target = "_blank">GitHub.</a>
+        <div class="description">
+            This entire website is a product of this project. I found this project to be really fun as I was able to completely design how I want to represent myself online everything from how my experience is displayed to the syles used. I also took the required steps to make this website fully resonsive so that it adjusts to your screen size. My wesite has nice UI/UX on both desktop and mobile.<br><br>
+            Languages used include HTML, CSS, JavaScript and PHP. You can find all the source code on my <a href = "https://github.com/bhamodi/bhamodi.github.io" target = "_blank">GitHub.</a>
         </div>
     </div>
 </div>
