--- a/new/portfolio-06.html
+++ b/new/portfolio-06.html
@@ -12,9 +12,9 @@
         </div>
         <div class="wrapper-project">
             <ul>
-                <li><img src="img/works/work-01a.jpg" /></li>
-                <li><img src="img/works/work-01b.jpg" /></li>
-                <li><img src="img/works/work-01c.jpg" /></li>
+                <li><img src="img/works/work-01a.jpg"/></li>
+                <li><img src="img/works/work-01b.jpg"/></li>
+                <li><img src="img/works/work-01c.jpg"/></li>
             </ul>
         </div>
         <div class="controller-3">
@@ -24,11 +24,13 @@
 	</div>
     <div class="clear"></div>
     <div class="info-project">
-        <div class="tag-project">Design / Photography</div>
-        <div class="title-project">Kallo Corn Cakes</div>
+        <div class="tag-project">Tools Developer</div>
+        <div class="title-project">Balance Tracker</div>
         <div class="spacer"></div>
-        <div class="description">Gabriele Galimberti is a documentary/travel photographer whose work has appeared in many international magazines including Newsweek, Le Monde, Geo, La Repubblica, Io Donna and Vanity Fair among others.<br><br>
-He  was born in Tuscany in 1977 and studied photography at ‘Fondazione Marangoni’ in Florence.  In 2002 Gabriele was selected as one of ten emerging young photographers in a competition called  ’Giovane Fotografia in Italia’.  He simultaneously made his debut as a commercial photographer with his first magazine assignments, and while he continues to be active in the field, his interests have expanded to include documentary/travel photography. In this vein he recently completed an 18-month couch-surfing trip around the world during which he gathered material for a number of photographic projects.</div>
+        <div class="description">
+            This project has saved me so many hours and allows me to keep a track of my finanaces. Balance Tracker has been such a useful application and I am in the process of open-sourcing this product so that more people can keep track of their finances. Essentially, this tool logs into all your online bank accounts and scrapes your total balances in each account. After it has completed going through all your accounts, it totals up the balance and it outputs the detailed information in a speadsheet. By the end of the year, this tool will have populated my spreadsheet with my total balance every single day. This is great for tracking finances and observing where and when you made money or spent money. The best part about this project is that I have set it up with Windows Task Scheduler so that my tool tuns itself every night at 11:00 PM. This makes this tool fully automatic and it runs in the background. Talk about convenient!<br><br>
+            This tool was developed using Python and Selenium. This project will be open sourced in the near future.
+        </div>
     </div>
 </div>
 <div class="clear"></div>
