--- a/new/portfolio-07.html
+++ b/new/portfolio-07.html
@@ -12,8 +12,8 @@
         </div>
         <div class="wrapper-project">
             <ul>
-           <li><iframe width="1180" height="664" src="//www.youtube.com/embed/kn-1D5z3-Cs" frameborder="0" allowfullscreen></iframe></li>
-              </ul>
+                <li><iframe width="1180" height="664" src="//www.youtube.com/embed/kn-1D5z3-Cs" frameborder="0" allowfullscreen></iframe></li>
+            </ul>
         </div>
         <div class="controller-3">
             <ul>
@@ -22,11 +22,10 @@
 	</div>
     <div class="clear"></div>
     <div class="info-project">
-        <div class="tag-project">Design / Photography</div>
-        <div class="title-project">Blackboard</div>
+        <div class="tag-project">Software</div>
+        <div class="title-project">Top Secret</div>
         <div class="spacer"></div>
-        <div class="description">Gabriele Galimberti is a documentary/travel photographer whose work has appeared in many international magazines including Newsweek, Le Monde, Geo, La Repubblica, Io Donna and Vanity Fair among others.<br><br>
-He  was born in Tuscany in 1977 and studied photography at ‘Fondazione Marangoni’ in Florence.  In 2002 Gabriele was selected as one of ten emerging young photographers in a competition called  ’Giovane Fotografia in Italia’.  He simultaneously made his debut as a commercial photographer with his first magazine assignments, and while he continues to be active in the field, his interests have expanded to include documentary/travel photography. In this vein he recently completed an 18-month couch-surfing trip around the world during which he gathered material for a number of photographic projects.</div>
+        <div class="description">This project is not available for public eye yet.</div>
     </div>
 </div>
 <div class="clear"></div>
