Updated skills section. Now displays 12 languages.

--- a/new/home.html
+++ b/new/home.html
@@ -106,21 +106,8 @@
             <div class="title two">I take pride in my interdisciplinary approach in crafting beautiful, functional and engaging work that delights and delivers results.</div>
             <div class="s-container services-container">
                 <section class="services">
-                    <!--<div class="s-element">
-                        <div class="s-ico"></div>
-                        <div class="s-info"><span>Developer Track</span><br><br>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Stet clita kasd gubergren.</div>
-                    </div>
-                    <div class="s-element">
-                        <div class="s-ico"></div>
-                        <div class="s-info"><span>SEO Analytics</span><br><br>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Stet clita kasd gubergren.</div>
-                    </div>
-                    <div class="s-element">
-                        <div class="s-ico"></div>
-                        <div class="s-info"><span>Amazing Ideas</span><br><br>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Stet clita kasd gubergren.</div>
-                    </div>-->
                     <div class="sl-element hideme dontHide">
-                        <div class="sl-ico sl-config"></div>
-                        <div class="sl-title">C++</div>
+                        <div class="sl-ico"><div class="sl-title">C++</div></div>
                         <div class="tooltip s-roll">
                             <div class="details">
                                 <ul class="feature-list">
@@ -133,8 +120,7 @@
                         <span class="arrow-down s-roll"></span>
                     </div>
                     <div class="sl-element hideme dontHide">
-                        <div class="sl-ico sl-diamond"></div>
-                        <div class="sl-title">Java</div>
+                        <div class="sl-ico"><div class="sl-title">Java</div></div>
                         <div class="tooltip s-roll">
                             <div class="details">
                                 <ul class="feature-list">
@@ -147,8 +133,7 @@
                         <span class="arrow-down s-roll"></span>
                     </div>
                     <div class="sl-element hideme dontHide">
-                        <div class="sl-ico sl-globe"></div>
-                        <div class="sl-title">HTML/CSS</div>
+                        <div class="sl-ico"><div class="sl-title">HTML</div></div>
                         <div class="tooltip s-roll">
                             <div class="details">
                                 <ul class="feature-list">
@@ -161,8 +146,20 @@
                         <span class="arrow-down s-roll"></span>
                     </div>
                     <div class="sl-element hideme dontHide">
-                        <div class="sl-ico sl-pointer"></div>
-                        <div class="sl-title">Javascript</div>
+                        <div class="sl-ico"><div class="sl-title">CSS</div></div>
+                        <div class="tooltip s-roll">
+                            <div class="details">
+                                <ul class="feature-list">
+                                    <li><span class="list-dot"></span>Responsive Frontend Design</li>
+                                    <li><span class="list-dot"></span>Modular Web Elements</li>
+                                    <li><span class="list-dot"></span>Cross-browser + Mobile First Design</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <span class="arrow-down s-roll"></span>
+                    </div>
+                    <div class="sl-element hideme dontHide">
+                        <div class="sl-ico"><div class="sl-title">Javascript</div></div>
                         <div class="tooltip s-roll">
                             <div class="details">
                                 <ul class="feature-list">
@@ -175,8 +172,85 @@
                         <span class="arrow-down s-roll"></span>
                     </div>
                     <div class="sl-element hideme dontHide">
-                        <div class="sl-ico sl-clock"></div>
-                        <div class="sl-title">PHP/Python</div>
+                        <div class="sl-ico"><div class="sl-title">PHP</div></div>
+                        <div class="tooltip s-roll">
+                            <div class="details">
+                                <ul class="feature-list">
+                                    <li><span class="list-dot"></span>Backend Framework Design</li>
+                                    <li><span class="list-dot"></span>Script Automation</li>
+                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <span class="arrow-down s-roll"></span>
+                    </div>
+                    <div class="sl-element hideme dontHide">
+                        <div class="sl-ico"><div class="sl-title">Python</div></div>
+                        <div class="tooltip s-roll">
+                            <div class="details">
+                                <ul class="feature-list">
+                                    <li><span class="list-dot"></span>Backend Framework Design</li>
+                                    <li><span class="list-dot"></span>Script Automation</li>
+                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <span class="arrow-down s-roll"></span>
+                    </div>
+                    <div class="sl-element hideme dontHide">
+                        <div class="sl-ico"><div class="sl-title">SQL</div></div>
+                        <div class="tooltip s-roll">
+                            <div class="details">
+                                <ul class="feature-list">
+                                    <li><span class="list-dot"></span>Backend Framework Design</li>
+                                    <li><span class="list-dot"></span>Script Automation</li>
+                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <span class="arrow-down s-roll"></span>
+                    </div>
+                    <div class="sl-element hideme dontHide">
+                        <div class="sl-ico"><div class="sl-title">jQuery</div></div>
+                        <div class="tooltip s-roll">
+                            <div class="details">
+                                <ul class="feature-list">
+                                    <li><span class="list-dot"></span>Backend Framework Design</li>
+                                    <li><span class="list-dot"></span>Script Automation</li>
+                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <span class="arrow-down s-roll"></span>
+                    </div>
+                    <div class="sl-element hideme dontHide">
+                        <div class="sl-ico"><div class="sl-title">PowerShell</div></div>
+                        <div class="tooltip s-roll">
+                            <div class="details">
+                                <ul class="feature-list">
+                                    <li><span class="list-dot"></span>Backend Framework Design</li>
+                                    <li><span class="list-dot"></span>Script Automation</li>
+                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <span class="arrow-down s-roll"></span>
+                    </div>
+                    <div class="sl-element hideme dontHide">
+                        <div class="sl-ico"><div class="sl-title">C</div></div>
+                        <div class="tooltip s-roll">
+                            <div class="details">
+                                <ul class="feature-list">
+                                    <li><span class="list-dot"></span>Backend Framework Design</li>
+                                    <li><span class="list-dot"></span>Script Automation</li>
+                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <span class="arrow-down s-roll"></span>
+                    </div>
+                    <div class="sl-element hideme dontHide">
+                        <div class="sl-ico"><div class="sl-title">XML</div></div>
                         <div class="tooltip s-roll">
                             <div class="details">
                                 <ul class="feature-list">
