Implemented bouncing arrow on home page.

--- a/new/home.html
+++ b/new/home.html
@@ -59,6 +59,7 @@
             <div>
                 <div class="mk-video-mask"></div>
                 <a id="video-volume" onclick="$('#bgndVideo').toggleVolume()"><i class="icon-volume-down"></i></a>
+                <div class="bounce"></div>
                 
                 <!-- Video Background -->
                 <a id="bgndVideo" class="player mb_YTVPlayer" data-property="{videoURL:'http://www.youtube.com/watch?v=kn-1D5z3-Cs',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}" style="display: none; background-image: none; background-position: initial initial; background-repeat: initial initial;" title="New York &quot;Afterglow&quot;">youtube</a>
