--- a/new/home.html
+++ b/new/home.html
@@ -35,7 +35,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/solido.css">
+        <link rel="stylesheet" href="css/default.css">
         <link rel="stylesheet" href="css/isotope.css">
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="css/jquery.vegas.css">
