Made audio button responsive. Cleaned up JS.

--- a/new/home.html
+++ b/new/home.html
@@ -336,7 +336,6 @@
                             <a href="#filter" data-option-value=".web" class="folio-btn"><div class="portfolio-btn">Web</div></a>
                             <a href="#filter" data-option-value=".mobile" class="folio-btn"><div class="portfolio-btn">Mobile</div></a>
                             <a href="#filter" data-option-value=".tools" class="folio-btn"><div class="portfolio-btn">Tools</div></a>
-                            <a href="#filter" data-option-value=".games" class="folio-btn"><div class="portfolio-btn">Games</div></a>
                             <a href="#filter" data-option-value=".backend" class="folio-btn"><div class="portfolio-btn">Backend</div></a>
                             <a href="#filter" data-option-value=".hardware" class="folio-btn"><div class="portfolio-btn">Hardware</div></a>
                         </div>
@@ -356,7 +355,7 @@
                             </div>
                         </div>
 
-                        <div class="ch-grid element games mobile" id="portfolio-02.html">
+                        <div class="ch-grid element mobile" id="portfolio-02.html">
                             <img class="ch-item" src="img/portfolio/thumb-02.jpg" alt='img'>
                             <div>
                                 <span><span class="p-category"></span>Android Game<span class="cat2">Mobile Game Developer</span></span>
@@ -510,7 +509,7 @@
         <script src="js/home/jquery.nav.js"></script>
         <script src="js/home/popup/jquery.magnific-popup.js"></script>
         <script src="js/home/jquery.isotope.min.js"></script>
-        <script src="js/home/video/jquery.mb.YTPlayer.js"></script>
+        <script src="js/home/video/jquery.YTPlayer.js"></script>
         <script src="js/home/jquery.validate.js"></script>
         <script src="js/home/jquery.form.min.js"></script>
         <script src="js/home/devices.js"></script>
